--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "worldpay-envoy",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "main": "./lib/index.js",
   "description": "Simple node.js lib to work with http://www.envoyservices.com/ api",
   "homepage": "https://github.com/valorkin/worldpay-envoy-lib-node",
@@ -32,7 +32,8 @@
   },
   "dependencies": {
     "lodash": "2.*",
-    "request": "^2.45.0"
+    "request": "^2.45.0",
+    "soap": "^0.16.0"
   },
   "devDependencies": {
     "gulp": "^3.8.7",
